--- a/stores-page.html
+++ b/stores-page.html
@@ -46,12 +46,12 @@
             <div id = "storeSection" class = "container-fluid mt-4">
                 <h2 class = "section-header">Stores</h2>
                 <div class = "row justify-content-center text-center">
-                    <span class = "col-md-6 mt-3">
+                    <span class = "col-md-3 mt-3">
                         <span class = "dropdown">
                             <button class = "dropdown-toggle" type = "button" id = "amazonTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 Amazon 
                             </button>
-                            <ul class = "dropdown-menu" aria-labelledby = "amazonTab">
+                            <ol class = "dropdown-menu" aria-labelledby = "amazonTab">
                                 <span class = "dropdown-header">Products Available</span>
                                 <li class = "nav-item">
                                     <a class = "nav-link" href = "https://www.amazon.com/Coral-Feast-Powdered-Quality-Food/dp/B08M95Z64Q/ref=sr_1_1?crid=2DB1V05HEENV5&keywords=coral%2Bfeast&qid=1636048104&sprefix=coral%2Caps%2C210&sr=8-1&th=1" target = "_blank"> Coral Feast </a>
@@ -59,11 +59,11 @@
                                 <li class = "nav-item">
                                     <a class = "nav-link" href = "https://www.amazon.com/AminoFeast-Quality-Coral-Amino-Acids/dp/B08P7VL6PX/ref=sr_1_2?keywords=amino+feast&qid=1636048123&sr=8-2" target = "_blank"> AminoFeast+ </a>
                                 </li>
-                            </ul>
+                            </ol>
                         </span>
                         <!--<a href = "https://www.amazon.com/Coral-Feast-Powdered-Quality-Food/dp/B08M95Z64Q?th=1" target = _blank>Amazon</a>-->
                     </span>
-                    <span class = "col-md-6 mt-3">
+                    <span class = "col-md-3 mt-3">
                         <span class = "dropdown">
                             <button class = "dropdown-toggle" type = "button" id = "aquaCaveTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 AquaCave
@@ -71,16 +71,15 @@
                             <ul class = "dropdown-menu" aria-labelledby = "aquaCaveTab">
                                 <span class = "dropdown-header">Products Available</span>
                                 <li class = "nav-item">
-                                    <a class = "nav-link" href = "https://www.aquacave.com/coral-feast-jars.html" target = "_blank"> Coral Feast </a>
+                                    <a class = "nav-link" href = "https://www.aquacave.com/coral-feast-jars.html" target = "_blank"> 
+                                        Coral Feast 
+                                    </a>
                                 </li>
                             </ul>
                         </span>
                         <!--<a href = "https://www.aquacave.com/coral-feast-jars.html" target = _blank>AquaCave</a>-->
                     </span>
-                </div>
-
-                <div class = "row justify-content-center text-center">
-                    <span class = "col-md-6 mt-3">
+                    <span class = "col-md-3 mt-3">
                         <span class = "dropdown">
                             <button class = "dropdown-toggle" type = "button" id = "aquariumSpecialtyTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 Aquarium Specialty
@@ -94,7 +93,7 @@
                         </span>
                         <!--<a href = "https://www.aquariumspecialty.com/willows-reef-coral-feast.html" target = _blank>Aquarium Specialty</a>-->
                     </span>
-                    <span class = "col-md-6 mt-3">
+                    <span class = "col-md-3 mt-3">
                         <span class = "dropdown">
                             <button class = "dropdown-toggle" type = "button" id = "coralHubTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 Coral Hub
@@ -117,7 +116,7 @@
                 </div>
 
                 <div class = "row justify-content-center text-center">
-                    <span class = "col-md-6 mt-3">
+                    <span class = "col-md-3 mt-3">
                         <span class = "dropdown">
                             <button class = "dropdown-toggle" type = "button" id = "noopsycheTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 Noopsyche USA
@@ -131,7 +130,7 @@
                         </span>
                         <!--<a href = "https://noopsycheusa.com/products/coral-feast-no-filler-coral-food-60g" target = _blank>Noopsyche USA</a>-->
                     </span>
-                    <span class = "col-md-6 mt-3">
+                    <span class = "col-md-3 mt-3">
                         <span class = "dropdown">
                             <button class = "dropdown-toggle" type = "button" id = "reefShackTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 Reef Shack
@@ -151,6 +150,8 @@
                         </span>
                         <!--<a href = "https://www.glassaquaticsonline.com/copy-of-coral-feast-60g-willows.html" target = _blank>Glass Aquatics</a>-->
                     </span>
+                    <span class = "col-md-3 mt-3"></span>
+                    <span class = "col-md-3 mt-3"></span>
                 </div>
             </div>
         </div>
