--- a/stores-page.html
+++ b/stores-page.html
@@ -46,7 +46,7 @@
             <div id = "storeSection" class = "container-fluid mt-4">
                 <h2 class = "section-header">Stores</h2>
                 <div class = "row justify-content-center text-center">
-                    <span class = "col-md-3 mt-3">
+                    <span class = "col-md-6 mt-3">
                         <span class = "dropdown">
                             <button class = "dropdown-toggle" type = "button" id = "amazonTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 Amazon 
@@ -63,7 +63,7 @@
                         </span>
                         <!--<a href = "https://www.amazon.com/Coral-Feast-Powdered-Quality-Food/dp/B08M95Z64Q?th=1" target = _blank>Amazon</a>-->
                     </span>
-                    <span class = "col-md-3 mt-3">
+                    <span class = "col-md-6 mt-3">
                         <span class = "dropdown">
                             <button class = "dropdown-toggle" type = "button" id = "aquaCaveTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 AquaCave
@@ -79,7 +79,10 @@
                         </span>
                         <!--<a href = "https://www.aquacave.com/coral-feast-jars.html" target = _blank>AquaCave</a>-->
                     </span>
-                    <span class = "col-md-3 mt-3">
+                </div>
+
+                <div class = "row justify-content-center text-center">
+                    <span class = "col-md-6 mt-3">
                         <span class = "dropdown">
                             <button class = "dropdown-toggle" type = "button" id = "aquariumSpecialtyTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 Aquarium Specialty
@@ -93,7 +96,7 @@
                         </span>
                         <!--<a href = "https://www.aquariumspecialty.com/willows-reef-coral-feast.html" target = _blank>Aquarium Specialty</a>-->
                     </span>
-                    <span class = "col-md-3 mt-3">
+                    <span class = "col-md-6 mt-3">
                         <span class = "dropdown">
                             <button class = "dropdown-toggle" type = "button" id = "coralHubTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 Coral Hub
@@ -116,7 +119,7 @@
                 </div>
 
                 <div class = "row justify-content-center text-center">
-                    <span class = "col-md-3 mt-3">
+                    <span class = "col-md-6 mt-3">
                         <span class = "dropdown">
                             <button class = "dropdown-toggle" type = "button" id = "noopsycheTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 Noopsyche USA
@@ -130,7 +133,7 @@
                         </span>
                         <!--<a href = "https://noopsycheusa.com/products/coral-feast-no-filler-coral-food-60g" target = _blank>Noopsyche USA</a>-->
                     </span>
-                    <span class = "col-md-3 mt-3">
+                    <span class = "col-md-6 mt-3">
                         <span class = "dropdown">
                             <button class = "dropdown-toggle" type = "button" id = "reefShackTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 Reef Shack
@@ -150,8 +153,6 @@
                         </span>
                         <!--<a href = "https://www.glassaquaticsonline.com/copy-of-coral-feast-60g-willows.html" target = _blank>Glass Aquatics</a>-->
                     </span>
-                    <span class = "col-md-3 mt-3"></span>
-                    <span class = "col-md-3 mt-3"></span>
                 </div>
             </div>
         </div>
