--- a/stores-page.html
+++ b/stores-page.html
@@ -47,11 +47,11 @@
                 <h2 class = "section-header">Stores</h2>
                 <div class = "row justify-content-center text-center">
                     <span class = "col-md-6 mt-3">
-                        <span class = "dropdown">
+                        <span class = "dropend text-center">
                             <button class = "dropdown-toggle" type = "button" id = "amazonTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 Amazon 
                             </button>
-                            <ol class = "dropdown-menu" aria-labelledby = "amazonTab">
+                            <ul class = "dropdown-menu" aria-labelledby = "amazonTab">
                                 <span class = "dropdown-header">Products Available</span>
                                 <li class = "nav-item">
                                     <a class = "nav-link" href = "https://www.amazon.com/Coral-Feast-Powdered-Quality-Food/dp/B08M95Z64Q/ref=sr_1_1?crid=2DB1V05HEENV5&keywords=coral%2Bfeast&qid=1636048104&sprefix=coral%2Caps%2C210&sr=8-1&th=1" target = "_blank"> Coral Feast </a>
@@ -59,12 +59,12 @@
                                 <li class = "nav-item">
                                     <a class = "nav-link" href = "https://www.amazon.com/AminoFeast-Quality-Coral-Amino-Acids/dp/B08P7VL6PX/ref=sr_1_2?keywords=amino+feast&qid=1636048123&sr=8-2" target = "_blank"> AminoFeast+ </a>
                                 </li>
-                            </ol>
+                            </ul>
                         </span>
                         <!--<a href = "https://www.amazon.com/Coral-Feast-Powdered-Quality-Food/dp/B08M95Z64Q?th=1" target = _blank>Amazon</a>-->
                     </span>
                     <span class = "col-md-6 mt-3">
-                        <span class = "dropdown">
+                        <span class = "dropend">
                             <button class = "dropdown-toggle" type = "button" id = "aquaCaveTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 AquaCave
                             </button>
@@ -83,7 +83,7 @@
 
                 <div class = "row justify-content-center text-center">
                     <span class = "col-md-6 mt-3">
-                        <span class = "dropdown">
+                        <span class = "dropend">
                             <button class = "dropdown-toggle" type = "button" id = "aquariumSpecialtyTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 Aquarium Specialty
                             </button>
@@ -97,7 +97,7 @@
                         <!--<a href = "https://www.aquariumspecialty.com/willows-reef-coral-feast.html" target = _blank>Aquarium Specialty</a>-->
                     </span>
                     <span class = "col-md-6 mt-3">
-                        <span class = "dropdown">
+                        <span class = "dropend">
                             <button class = "dropdown-toggle" type = "button" id = "coralHubTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 Coral Hub
                             </button>
@@ -120,7 +120,7 @@
 
                 <div class = "row justify-content-center text-center">
                     <span class = "col-md-6 mt-3">
-                        <span class = "dropdown">
+                        <span class = "dropend">
                             <button class = "dropdown-toggle" type = "button" id = "noopsycheTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 Noopsyche USA
                             </button>
@@ -134,7 +134,7 @@
                         <!--<a href = "https://noopsycheusa.com/products/coral-feast-no-filler-coral-food-60g" target = _blank>Noopsyche USA</a>-->
                     </span>
                     <span class = "col-md-6 mt-3">
-                        <span class = "dropdown">
+                        <span class = "dropend">
                             <button class = "dropdown-toggle" type = "button" id = "reefShackTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 Reef Shack
                             </button>
