--- a/global-header.html
+++ b/global-header.html
@@ -120,7 +120,7 @@
                                 </button>
                                 <ul class = "dropdown-menu" aria-labelledby = "productTab">
                                     <li class = "nav-item">
-                                        <a class = "nav-link" href = "/Willows-Reef-Mock-Up/products-page.html"> Individual Items </a>
+                                        <a class = "nav-link" href = "/Willows-Reef-Mock-Up/products-page.html"> Individual </a>
                                     </li>
                                     <li class = "nav-item">
                                         <a class = "nav-link" href = "/Willows-Reef-Mock-Up/wholesale-page.html"> Wholesale </a>
