--- a/stores-page.html
+++ b/stores-page.html
@@ -46,8 +46,8 @@
             <div id = "storeSection" class = "container-fluid mt-4">
                 <h2 class = "section-header">Stores</h2>
                 <div class = "row justify-content-center text-center">
-                    <span class = "col-md-6 mt-3">
-                        <span class = "dropdown text-center">
+                    <span class = "col-6 mt-3">
+                        <span class = "dropdown btn-group">
                             <button class = "dropdown-toggle" type = "button" id = "amazonTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 Amazon 
                             </button>
@@ -63,7 +63,7 @@
                         </span>
                         <!--<a href = "https://www.amazon.com/Coral-Feast-Powdered-Quality-Food/dp/B08M95Z64Q?th=1" target = _blank>Amazon</a>-->
                     </span>
-                    <span class = "col-md-6 mt-3">
+                    <span class = "col-6 mt-3">
                         <span class = "dropdown">
                             <button class = "dropdown-toggle" type = "button" id = "aquaCaveTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 AquaCave
@@ -82,7 +82,7 @@
                 </div>
 
                 <div class = "row justify-content-center text-center">
-                    <span class = "col-md-6 mt-3">
+                    <span class = "col-6 mt-3">
                         <span class = "dropdown">
                             <button class = "dropdown-toggle" type = "button" id = "aquariumSpecialtyTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 Aquarium Specialty
@@ -96,7 +96,7 @@
                         </span>
                         <!--<a href = "https://www.aquariumspecialty.com/willows-reef-coral-feast.html" target = _blank>Aquarium Specialty</a>-->
                     </span>
-                    <span class = "col-md-6 mt-3">
+                    <span class = "col-6 mt-3">
                         <span class = "dropdown">
                             <button class = "dropdown-toggle" type = "button" id = "coralHubTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 Coral Hub
@@ -119,7 +119,7 @@
                 </div>
 
                 <div class = "row justify-content-center text-center">
-                    <span class = "col-md-6 mt-3">
+                    <span class = "col-6 mt-3">
                         <span class = "dropdown">
                             <button class = "dropdown-toggle" type = "button" id = "noopsycheTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 Noopsyche USA
@@ -133,7 +133,7 @@
                         </span>
                         <!--<a href = "https://noopsycheusa.com/products/coral-feast-no-filler-coral-food-60g" target = _blank>Noopsyche USA</a>-->
                     </span>
-                    <span class = "col-md-6 mt-3">
+                    <span class = "col-6 mt-3">
                         <span class = "dropdown">
                             <button class = "dropdown-toggle" type = "button" id = "reefShackTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 Reef Shack
