--- a/stores-page.html
+++ b/stores-page.html
@@ -45,8 +45,11 @@
 
             <div id = "storeSection" class = "container-fluid mt-4">
                 <h2 class = "section-header">Stores</h2>
-                <div class = "row justify-content-center text-center">
-                    <span class = "col-6 mt-3">
+                <div class = "row justify-content-center text-start">
+                    <span class = "col-3">
+                        &nbsp;
+                    </span>
+                    <span class = "col-3 mt-3">
                         <span class = "dropdown btn-group">
                             <button class = "dropdown-toggle" type = "button" id = "amazonTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 Amazon 
@@ -63,7 +66,7 @@
                         </span>
                         <!--<a href = "https://www.amazon.com/Coral-Feast-Powdered-Quality-Food/dp/B08M95Z64Q?th=1" target = _blank>Amazon</a>-->
                     </span>
-                    <span class = "col-6 mt-3">
+                    <span class = "col-3 mt-3">
                         <span class = "dropdown">
                             <button class = "dropdown-toggle" type = "button" id = "aquaCaveTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 AquaCave
@@ -79,10 +82,16 @@
                         </span>
                         <!--<a href = "https://www.aquacave.com/coral-feast-jars.html" target = _blank>AquaCave</a>-->
                     </span>
+                    <span class = "col-3">
+                        &nbsp;
+                    </span>
                 </div>
 
-                <div class = "row justify-content-center text-center">
-                    <span class = "col-6 mt-3">
+                <div class = "row justify-content-center text-start">
+                    <span class = "col-3">
+                        &nbsp;
+                    </span>
+                    <span class = "col-3 mt-3">
                         <span class = "dropdown">
                             <button class = "dropdown-toggle" type = "button" id = "aquariumSpecialtyTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 Aquarium Specialty
@@ -96,7 +105,7 @@
                         </span>
                         <!--<a href = "https://www.aquariumspecialty.com/willows-reef-coral-feast.html" target = _blank>Aquarium Specialty</a>-->
                     </span>
-                    <span class = "col-6 mt-3">
+                    <span class = "col-3 mt-3">
                         <span class = "dropdown">
                             <button class = "dropdown-toggle" type = "button" id = "coralHubTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 Coral Hub
@@ -116,10 +125,16 @@
                         </span>
                         <!--<a href = "https://www.indiefur.com/product/willows-reef-coral-feast/" target = _blank>IndieFur</a>-->
                     </span>
+                    <span class = "col-3">
+                        &nbsp;
+                    </span>
                 </div>
 
-                <div class = "row justify-content-center text-center">
-                    <span class = "col-6 mt-3">
+                <div class = "row justify-content-center text-start">
+                    <span class = "col-3">
+                        &nbsp;
+                    </span>
+                    <span class = "col-3 mt-3">
                         <span class = "dropdown">
                             <button class = "dropdown-toggle" type = "button" id = "noopsycheTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 Noopsyche USA
@@ -133,7 +148,7 @@
                         </span>
                         <!--<a href = "https://noopsycheusa.com/products/coral-feast-no-filler-coral-food-60g" target = _blank>Noopsyche USA</a>-->
                     </span>
-                    <span class = "col-6 mt-3">
+                    <span class = "col-3 mt-3">
                         <span class = "dropdown">
                             <button class = "dropdown-toggle" type = "button" id = "reefShackTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 Reef Shack
@@ -152,6 +167,9 @@
                             </ul>
                         </span>
                         <!--<a href = "https://www.glassaquaticsonline.com/copy-of-coral-feast-60g-willows.html" target = _blank>Glass Aquatics</a>-->
+                    </span>
+                    <span class = "col-3">
+                        &nbsp;
                     </span>
                 </div>
             </div>
