--- a/stores-page.html
+++ b/stores-page.html
@@ -104,13 +104,13 @@
                             <ul class = "dropdown-menu" aria-labelledby = "coralHubTab">
                                 <span class = "dropdown-header">Products Available</span>
                                 <li class = "nav-item">
-                                    <a class = "nav-link" href = "" target = "_blank"> Coral Feast </a>
+                                    <a class = "nav-link" href = "https://coralhubus.com/cart-2/coral-feast-60g/" target = "_blank"> Coral Feast </a>
                                 </li>
                                 <li class = "nav-item">
-                                    <a class = "nav-link" href = "" target = "_blank"> AminoFeast+ </a>
+                                    <a class = "nav-link" href = "https://coralhubus.com/cart-2/3-4-frag-plug/" target = "_blank"> AminoFeast+ </a>
                                 </li>
                                 <li class = "nav-item">
-                                    <a class = "nav-link" href = "" target = "_blank"> RhodoFeast </a>
+                                    <a class = "nav-link" href = "https://coralhubus.com/cart-2/rhodofeast/" target = "_blank"> RhodoFeast </a>
                                 </li>
                             </ul>
                         </span>
