--- a/stores-page.html
+++ b/stores-page.html
@@ -44,9 +44,9 @@
             <div id = "screenOverlay">&nbsp;</div>
 
             <div id = "storeSection" class = "container-fluid mt-4">
-                <h2 class = "section-header">Stores</h2>
+                <h2 class = "section-header mb-0">Stores</h2>
                 <div class = "row justify-content-center text-center">
-                    <span class = "col-md-6 mt-3">
+                    <span class = "col-12 col-md-6 col-lg-4 mt-3">
                         <span class = "dropdown btn-group">
                             <button class = "dropdown-toggle" type = "button" id = "amazonTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 Amazon 
@@ -63,7 +63,21 @@
                         </span>
                         <!--<a href = "https://www.amazon.com/Coral-Feast-Powdered-Quality-Food/dp/B08M95Z64Q?th=1" target = _blank>Amazon</a>-->
                     </span>
-                    <span class = "col-md-6 mt-3">
+                    <span class = "col-12 col-md-6 col-lg-4 mt-3">
+                        <span class = "dropdown btn-group">
+                            <button class = "dropdown-toggle" type = "button" id = "aacTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
+                                AAC
+                            </button>
+                            <ul class = "dropdown-menu" aria-labelledby = "aacTab">
+                                <span class = "dropdown-header">Products Available</span>
+                                <li class = "nav-item">
+                                    <a class = "nav-link" href = "https://www.aac-online.co.uk/shop/dry-goods/willows-reef-coral-feast-60g/" target = "_blank"> Coral Feast </a>
+                                </li>
+                            </ul>
+                        </span>
+                        <!--<a href = "https://www.glassaquaticsonline.com/copy-of-coral-feast-60g-willows.html" target = _blank>Glass Aquatics</a>-->
+                    </span>
+                    <span class = "col-12 col-md-6 col-lg-4 mt-3">
                         <span class = "dropdown btn-group">
                             <button class = "dropdown-toggle" type = "button" id = "aquaCaveTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 AquaCave
@@ -79,10 +93,7 @@
                         </span>
                         <!--<a href = "https://www.aquacave.com/coral-feast-jars.html" target = _blank>AquaCave</a>-->
                     </span>
-                </div>
-
-                <div class = "row justify-content-center text-center">
-                    <span class = "col-md-6 mt-3">
+                    <span class = "col-12 col-md-6 col-lg-4 mt-3">
                         <span class = "dropdown btn-group">
                             <button class = "dropdown-toggle" type = "button" id = "aquariumSpecialtyTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 Aquarium Specialty
@@ -96,7 +107,7 @@
                         </span>
                         <!--<a href = "https://www.aquariumspecialty.com/willows-reef-coral-feast.html" target = _blank>Aquarium Specialty</a>-->
                     </span>
-                    <span class = "col-md-6 mt-3">
+                    <span class = "col-12 col-md-6 col-lg-4 mt-3">
                         <span class = "dropdown btn-group">
                             <button class = "dropdown-toggle" type = "button" id = "coralHubTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 Coral Hub
@@ -116,10 +127,7 @@
                         </span>
                         <!--<a href = "https://www.indiefur.com/product/willows-reef-coral-feast/" target = _blank>IndieFur</a>-->
                     </span>
-                </div>
-
-                <div class = "row justify-content-center text-center">
-                    <span class = "col-md-6 mt-3">
+                    <span class = "col-12 col-md-6 col-lg-4 mt-3">
                         <span class = "dropdown btn-group">
                             <button class = "dropdown-toggle" type = "button" id = "noopsycheTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 Noopsyche USA
@@ -133,7 +141,7 @@
                         </span>
                         <!--<a href = "https://noopsycheusa.com/products/coral-feast-no-filler-coral-food-60g" target = _blank>Noopsyche USA</a>-->
                     </span>
-                    <span class = "col-md-6 mt-3">
+                    <span class = "col-12 col-md-6 col-lg-4 mt-3">
                         <span class = "dropdown btn-group">
                             <button class = "dropdown-toggle" type = "button" id = "reefShackTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 Reef Shack
@@ -148,6 +156,34 @@
                                 </li>
                                 <li class = "nav-item">
                                     <a class = "nav-link" href = "https://reefshackllc.com/products/rhodofeast-premium-direct-feed-probiotic-4oz-nitrate-phosphate-remover?_pos=2&_sid=9b682b3ea&_ss=r" target = "_blank"> RhodoFeast </a>
+                                </li>
+                            </ul>
+                        </span>
+                        <!--<a href = "https://www.glassaquaticsonline.com/copy-of-coral-feast-60g-willows.html" target = _blank>Glass Aquatics</a>-->
+                    </span>
+                    <span class = "col-12 col-md-6 col-lg-4 mt-3">
+                        <span class = "dropdown btn-group">
+                            <button class = "dropdown-toggle" type = "button" id = "indieFurTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
+                                IndieFur
+                            </button>
+                            <ul class = "dropdown-menu" aria-labelledby = "indieFurTab">
+                                <span class = "dropdown-header">Products Available</span>
+                                <li class = "nav-item">
+                                    <a class = "nav-link" href = "https://www.indiefur.com/product/willows-reef-coral-feast/" target = "_blank"> Coral Feast </a>
+                                </li>
+                            </ul>
+                        </span>
+                        <!--<a href = "https://www.glassaquaticsonline.com/copy-of-coral-feast-60g-willows.html" target = _blank>Glass Aquatics</a>-->
+                    </span>
+                    <span class = "col-12 col-md-6 col-lg-4 mt-3">
+                        <span class = "dropdown btn-group">
+                            <button class = "dropdown-toggle" type = "button" id = "krakenTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
+                                Kraken Corals
+                            </button>
+                            <ul class = "dropdown-menu" aria-labelledby = "krakenTab">
+                                <span class = "dropdown-header">Products Available</span>
+                                <li class = "nav-item">
+                                    <a class = "nav-link" href = "https://krakencorals.co.uk/willows-reef-coral-feast-60g.html" target = "_blank"> Coral Feast </a>
                                 </li>
                             </ul>
                         </span>
