--- a/stores-page.html
+++ b/stores-page.html
@@ -45,13 +45,16 @@
 
             <div id = "storeSection" class = "container-fluid mt-4">
                 <h2 class = "section-header mb-0">Stores</h2>
-                <div class = "row justify-content-center text-center">
+                <div class = "row text-center">
                     <span class = "col-12 col-md-6 col-lg-4 mt-3">
                         <span class = "dropdown btn-group">
                             <button class = "dropdown-toggle" type = "button" id = "amazonTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 Amazon 
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "amazonTab">
+                                <div style = "max-width: 85%; display: block; margin: 0.5rem auto; background: #fff; text-align: center; border: 0.1rem solid #07c2f9; padding: 5%;">
+                                    <img alt = "Amazon Logo" src = "images/test/test-1.png" style = "max-width: 100%; max-height: 4rem;">
+                                </div>
                                 <span class = "dropdown-header">Products Available</span>
                                 <li class = "nav-item">
                                     <a class = "nav-link" href = "https://www.amazon.com/Coral-Feast-Powdered-Quality-Food/dp/B08M95Z64Q/ref=sr_1_1?crid=2DB1V05HEENV5&keywords=coral%2Bfeast&qid=1636048104&sprefix=coral%2Caps%2C210&sr=8-1&th=1" target = "_blank"> Coral Feast </a>
@@ -59,7 +62,7 @@
                                 <li class = "nav-item">
                                     <a class = "nav-link" href = "https://www.amazon.com/AminoFeast-Quality-Coral-Amino-Acids/dp/B08P7VL6PX/ref=sr_1_2?keywords=amino+feast&qid=1636048123&sr=8-2" target = "_blank"> AminoFeast+ </a>
                                 </li>
-                            </ul>
+                            </ul> 
                         </span>
                         <!--<a href = "https://www.amazon.com/Coral-Feast-Powdered-Quality-Food/dp/B08M95Z64Q?th=1" target = _blank>Amazon</a>-->
                     </span>
@@ -83,6 +86,9 @@
                                 AquaCave
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "aquaCaveTab">
+                                <div style = "max-width: 85%; display: block; margin: 0.5rem auto; background: #fff; text-align: center; border: 0.1rem solid #07c2f9; padding: 5%;">
+                                    <img alt = "Amazon Logo" src = "images/test/test-2.png" style = "max-width: 100%; max-height: 4rem;">
+                                </div>
                                 <span class = "dropdown-header">Products Available</span>
                                 <li class = "nav-item">
                                     <a class = "nav-link" href = "https://www.aquacave.com/coral-feast-jars.html" target = "_blank"> 
@@ -99,6 +105,9 @@
                                 Aquarium Specialty
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "aquariumSpecialtyTab">
+                                <div style = "max-width: 85%; display: block; margin: 0.5rem auto; background: #fff; text-align: center; border: 0.1rem solid #07c2f9; padding: 5%;">
+                                    <img alt = "Amazon Logo" src = "images/test/test-3.png" style = "max-width: 100%; max-height: 4rem;">
+                                </div>
                                 <span class = "dropdown-header">Products Available</span>
                                 <li class = "nav-item">
                                     <a class = "nav-link" href = "https://www.aquariumspecialty.com/willows-reef-coral-feast.html" target = "_blank"> Coral Feast </a>
@@ -113,6 +122,9 @@
                                 Coral Hub
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "coralHubTab">
+                                <div style = "max-width: 85%; display: block; margin: 0.5rem auto; background: #fff; text-align: center; border: 0.1rem solid #07c2f9; padding: 5%;">
+                                    <img alt = "Amazon Logo" src = "images/test/test-4.png" style = "max-width: 100%; max-height: 4rem;">
+                                </div>
                                 <span class = "dropdown-header">Products Available</span>
                                 <li class = "nav-item">
                                     <a class = "nav-link" href = "https://coralhubus.com/cart-2/coral-feast-60g/" target = "_blank"> Coral Feast </a>
