--- a/stores-page.html
+++ b/stores-page.html
@@ -52,9 +52,9 @@
                                 Amazon 
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "amazonTab">
-                                <!--<div style = "max-width: 85%; display: block; margin: 0.5rem auto; background: #fff; text-align: center; border: 0.1rem solid #07c2f9; padding: 5%;">
+                                <div style = "max-width: 85%; display: block; margin: 0.5rem auto; background: #010048; text-align: center; border: 0.1rem solid #07c2f9; padding: 5%;">
                                     <img alt = "Amazon Logo" src = "images/test/test-1.png" style = "max-width: 100%; max-height: 4rem;">
-                                </div>-->
+                                </div>
                                 <span class = "dropdown-header">Products Available</span>
                                 <li class = "nav-item">
                                     <a class = "nav-link" href = "https://www.amazon.com/Coral-Feast-Powdered-Quality-Food/dp/B08M95Z64Q/ref=sr_1_1?crid=2DB1V05HEENV5&keywords=coral%2Bfeast&qid=1636048104&sprefix=coral%2Caps%2C210&sr=8-1&th=1" target = "_blank"> Coral Feast </a>
@@ -72,6 +72,9 @@
                                 AAC
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "aacTab">
+                                <div style = "max-width: 85%; display: block; margin: 0.5rem auto; background: #010048; text-align: center; border: 0.1rem solid #07c2f9; padding: 5%;">
+                                    <img alt = "Amazon Logo" src = "images/test/test-9.png" style = "max-width: 100%; max-height: 4rem;">
+                                </div>
                                 <span class = "dropdown-header">Products Available</span>
                                 <li class = "nav-item">
                                     <a class = "nav-link" href = "https://www.aac-online.co.uk/shop/dry-goods/willows-reef-coral-feast-60g/" target = "_blank"> Coral Feast </a>
@@ -86,9 +89,9 @@
                                 AquaCave
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "aquaCaveTab">
-                                <!--<div style = "max-width: 85%; display: block; margin: 0.5rem auto; background: #fff; text-align: center; border: 0.1rem solid #07c2f9; padding: 5%;">
+                                <div style = "max-width: 85%; display: block; margin: 0.5rem auto; background: #010048; text-align: center; border: 0.1rem solid #07c2f9; padding: 5%;">
                                     <img alt = "Amazon Logo" src = "images/test/test-2.png" style = "max-width: 100%; max-height: 4rem;">
-                                </div>-->
+                                </div>
                                 <span class = "dropdown-header">Products Available</span>
                                 <li class = "nav-item">
                                     <a class = "nav-link" href = "https://www.aquacave.com/coral-feast-jars.html" target = "_blank"> 
@@ -105,9 +108,9 @@
                                 Aquarium Specialty
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "aquariumSpecialtyTab">
-                                <!--<div style = "max-width: 85%; display: block; margin: 0.5rem auto; background: #fff; text-align: center; border: 0.1rem solid #07c2f9; padding: 5%;">
+                                <div style = "max-width: 85%; display: block; margin: 0.5rem auto; background: #010048; text-align: center; border: 0.1rem solid #07c2f9; padding: 5%;">
                                     <img alt = "Amazon Logo" src = "images/test/test-3.png" style = "max-width: 100%; max-height: 4rem;">
-                                </div>-->
+                                </div>
                                 <span class = "dropdown-header">Products Available</span>
                                 <li class = "nav-item">
                                     <a class = "nav-link" href = "https://www.aquariumspecialty.com/willows-reef-coral-feast.html" target = "_blank"> Coral Feast </a>
@@ -122,9 +125,9 @@
                                 Coral Hub
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "coralHubTab">
-                                <!--<div style = "max-width: 85%; display: block; margin: 0.5rem auto; background: #fff; text-align: center; border: 0.1rem solid #07c2f9; padding: 5%;">
+                                <div style = "max-width: 85%; display: block; margin: 0.5rem auto; background: #010048; text-align: center; border: 0.1rem solid #07c2f9; padding: 5%;">
                                     <img alt = "Amazon Logo" src = "images/test/test-4.png" style = "max-width: 100%; max-height: 4rem;">
-                                </div>-->
+                                </div>
                                 <span class = "dropdown-header">Products Available</span>
                                 <li class = "nav-item">
                                     <a class = "nav-link" href = "https://coralhubus.com/cart-2/coral-feast-60g/" target = "_blank"> Coral Feast </a>
@@ -145,6 +148,9 @@
                                 Noopsyche USA
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "noopsycheTab">
+                                <div style = "max-width: 85%; display: block; margin: 0.5rem auto; background: #010048; text-align: center; border: 0.1rem solid #07c2f9; padding: 5%;">
+                                    <img alt = "Amazon Logo" src = "images/test/test-5.png" style = "max-width: 100%; max-height: 4rem;">
+                                </div>
                                 <span class = "dropdown-header">Products Available</span>
                                 <li class = "nav-item">
                                     <a class = "nav-link" href = "https://noopsycheusa.com/products/coral-feast-no-filler-coral-food-60g" target = "_blank"> Coral Feast </a>
@@ -159,6 +165,9 @@
                                 Reef Shack
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "reefShackTab">
+                                <div style = "max-width: 85%; display: block; margin: 0.5rem auto; background: #010048; text-align: center; border: 0.1rem solid #07c2f9; padding: 5%;">
+                                    <img alt = "Amazon Logo" src = "images/test/test-6.png" style = "max-width: 100%; max-height: 4rem;">
+                                </div>
                                 <span class = "dropdown-header">Products Available</span>
                                 <li class = "nav-item">
                                     <a class = "nav-link" href = "https://reefshackllc.com/products/coral-feast-powdered-coral-food-60-gm?_pos=1&_sid=9b682b3ea&_ss=r" target = "_blank"> Coral Feast </a>
@@ -179,6 +188,9 @@
                                 IndieFur
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "indieFurTab">
+                                <div style = "max-width: 85%; display: block; margin: 0.5rem auto; background: #010048; text-align: center; border: 0.1rem solid #07c2f9; padding: 5%;">
+                                    <img alt = "Amazon Logo" src = "images/test/test-7.svg" style = "max-width: 100%; max-height: 4rem;">
+                                </div>
                                 <span class = "dropdown-header">Products Available</span>
                                 <li class = "nav-item">
                                     <a class = "nav-link" href = "https://www.indiefur.com/product/willows-reef-coral-feast/" target = "_blank"> Coral Feast </a>
@@ -193,6 +205,9 @@
                                 Kraken Corals
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "krakenTab">
+                                <div style = "max-width: 85%; display: block; margin: 0.5rem auto; background: #010048; text-align: center; border: 0.1rem solid #07c2f9; padding: 5%;">
+                                    <img alt = "Amazon Logo" src = "images/test/test-8.png" style = "max-width: 100%; max-height: 4rem;">
+                                </div>
                                 <span class = "dropdown-header">Products Available</span>
                                 <li class = "nav-item">
                                     <a class = "nav-link" href = "https://krakencorals.co.uk/willows-reef-coral-feast-60g.html" target = "_blank"> Coral Feast </a>
