--- a/stores-page.html
+++ b/stores-page.html
@@ -52,8 +52,8 @@
                                 Amazon 
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "amazonTab">
-                                <div style = "max-width: 85%; display: block; margin: 0.5rem auto; background: #010048; text-align: center; border: 0.1rem solid #07c2f9; padding: 5%;">
-                                    <img alt = "Amazon Logo" src = "images/test/test-1.png" style = "max-width: 100%; max-height: 4rem;">
+                                <div class = "store-logo">
+                                    <img alt = "Amazon" src = "images/test/test-1.png">
                                 </div>
                                 <span class = "dropdown-header">Products Available</span>
                                 <li class = "nav-item">
@@ -72,8 +72,8 @@
                                 AAC
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "aacTab">
-                                <div style = "max-width: 85%; display: block; margin: 0.5rem auto; background: #010048; text-align: center; border: 0.1rem solid #07c2f9; padding: 5%;">
-                                    <img alt = "Amazon Logo" src = "images/test/test-9.png" style = "max-width: 100%; max-height: 4rem;">
+                                <div class = "store-logo">
+                                    <img alt = "Advanced Aquarium Consultancy" src = "images/test/test-9.png" >
                                 </div>
                                 <span class = "dropdown-header">Products Available</span>
                                 <li class = "nav-item">
@@ -89,8 +89,8 @@
                                 AquaCave
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "aquaCaveTab">
-                                <div style = "max-width: 85%; display: block; margin: 0.5rem auto; background: #010048; text-align: center; border: 0.1rem solid #07c2f9; padding: 5%;">
-                                    <img alt = "Amazon Logo" src = "images/test/test-2.png" style = "max-width: 100%; max-height: 4rem;">
+                                <div class = "store-logo">
+                                    <img alt = "AquaCave" src = "images/test/test-2.png" >
                                 </div>
                                 <span class = "dropdown-header">Products Available</span>
                                 <li class = "nav-item">
@@ -108,8 +108,8 @@
                                 Aquarium Specialty
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "aquariumSpecialtyTab">
-                                <div style = "max-width: 85%; display: block; margin: 0.5rem auto; background: #010048; text-align: center; border: 0.1rem solid #07c2f9; padding: 5%;">
-                                    <img alt = "Amazon Logo" src = "images/test/test-3.png" style = "max-width: 100%; max-height: 4rem;">
+                                <div class = "store-logo">
+                                    <img alt = "Aquarium Specialty" src = "images/test/test-3.png" >
                                 </div>
                                 <span class = "dropdown-header">Products Available</span>
                                 <li class = "nav-item">
@@ -125,8 +125,8 @@
                                 Coral Hub
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "coralHubTab">
-                                <div style = "max-width: 85%; display: block; margin: 0.5rem auto; background: #010048; text-align: center; border: 0.1rem solid #07c2f9; padding: 5%;">
-                                    <img alt = "Amazon Logo" src = "images/test/test-4.png" style = "max-width: 100%; max-height: 4rem;">
+                                <div class = "store-logo">
+                                    <img alt = "Coral Hub" src = "images/test/test-4.png" >
                                 </div>
                                 <span class = "dropdown-header">Products Available</span>
                                 <li class = "nav-item">
@@ -148,8 +148,8 @@
                                 Noopsyche USA
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "noopsycheTab">
-                                <div style = "max-width: 85%; display: block; margin: 0.5rem auto; background: #010048; text-align: center; border: 0.1rem solid #07c2f9; padding: 5%;">
-                                    <img alt = "Amazon Logo" src = "images/test/test-5.png" style = "max-width: 100%; max-height: 4rem;">
+                                <div class = "store-logo">
+                                    <img alt = "Noopsyche USA" src = "images/test/test-5.png" >
                                 </div>
                                 <span class = "dropdown-header">Products Available</span>
                                 <li class = "nav-item">
@@ -165,8 +165,8 @@
                                 Reef Shack
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "reefShackTab">
-                                <div style = "max-width: 85%; display: block; margin: 0.5rem auto; background: #010048; text-align: center; border: 0.1rem solid #07c2f9; padding: 5%;">
-                                    <img alt = "Amazon Logo" src = "images/test/test-6.png" style = "max-width: 100%; max-height: 4rem;">
+                                <div class = "store-logo">
+                                    <img alt = "Reef Shack" src = "images/test/test-6.png" >
                                 </div>
                                 <span class = "dropdown-header">Products Available</span>
                                 <li class = "nav-item">
@@ -188,8 +188,8 @@
                                 IndieFur
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "indieFurTab">
-                                <div style = "max-width: 85%; display: block; margin: 0.5rem auto; background: #010048; text-align: center; border: 0.1rem solid #07c2f9; padding: 5%;">
-                                    <img alt = "Amazon Logo" src = "images/test/test-7.svg" style = "max-width: 100%; max-height: 4rem;">
+                                <div class = "store-logo">
+                                    <img alt = "IndieFur" src = "images/test/test-7.svg" >
                                 </div>
                                 <span class = "dropdown-header">Products Available</span>
                                 <li class = "nav-item">
@@ -205,8 +205,8 @@
                                 Kraken Corals
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "krakenTab">
-                                <div style = "max-width: 85%; display: block; margin: 0.5rem auto; background: #010048; text-align: center; border: 0.1rem solid #07c2f9; padding: 5%;">
-                                    <img alt = "Amazon Logo" src = "images/test/test-8.png" style = "max-width: 100%; max-height: 4rem;">
+                                <div class = "store-logo">
+                                    <img alt = "Kraken Corals" src = "images/test/test-8.png" >
                                 </div>
                                 <span class = "dropdown-header">Products Available</span>
                                 <li class = "nav-item">
