--- a/stores-page.html
+++ b/stores-page.html
@@ -189,7 +189,7 @@
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "indieFurTab">
                                 <div class = "store-logo">
-                                    <img alt = "IndieFur" src = "images/test/test-7.svg" >
+                                    <img alt = "IndieFur" src = "images/test/test-8.png" >
                                 </div>
                                 <span class = "dropdown-header">Products Available</span>
                                 <li class = "nav-item">
@@ -206,7 +206,7 @@
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "krakenTab">
                                 <div class = "store-logo">
-                                    <img alt = "Kraken Corals" src = "images/test/test-8.png" >
+                                    <img alt = "Kraken Corals" src = "images/test/test-7.svg" >
                                 </div>
                                 <span class = "dropdown-header">Products Available</span>
                                 <li class = "nav-item">
