--- a/stores-page.html
+++ b/stores-page.html
@@ -57,10 +57,10 @@
                                 </div>
                                 <span class = "dropdown-header">Products Available</span>
                                 <li class = "nav-item">
-                                    <a class = "nav-link" href = "https://www.amazon.com/Coral-Feast-Powdered-Quality-Food/dp/B08M95Z64Q/ref=sr_1_1?crid=2DB1V05HEENV5&keywords=coral%2Bfeast&qid=1636048104&sprefix=coral%2Caps%2C210&sr=8-1&th=1" target = "_blank"> Coral Feast </a>
+                                    <a class = "nav-link" href = "https://www.amazon.com/Coral-Feast-Powdered-Quality-Food/dp/B08M95Z64Q/ref=sr_1_1?crid=2DB1V05HEENV5&keywords=coral%2Bfeast&qid=1636048104&sprefix=coral%2Caps%2C210&sr=8-1&th=1" target = "_blank" rel = "noopener norferrer"> Coral Feast </a>
                                 </li>
                                 <li class = "nav-item">
-                                    <a class = "nav-link" href = "https://www.amazon.com/AminoFeast-Quality-Coral-Amino-Acids/dp/B08P7VL6PX/ref=sr_1_2?keywords=amino+feast&qid=1636048123&sr=8-2" target = "_blank"> AminoFeast+ </a>
+                                    <a class = "nav-link" href = "https://www.amazon.com/AminoFeast-Quality-Coral-Amino-Acids/dp/B08P7VL6PX/ref=sr_1_2?keywords=amino+feast&qid=1636048123&sr=8-2" target = "_blank" rel = "noopener norferrer"> AminoFeast+ </a>
                                 </li>
                             </ul> 
                         </span>
@@ -77,7 +77,7 @@
                                 </div>
                                 <span class = "dropdown-header">Products Available</span>
                                 <li class = "nav-item">
-                                    <a class = "nav-link" href = "https://www.aac-online.co.uk/shop/dry-goods/willows-reef-coral-feast-60g/" target = "_blank"> Coral Feast </a>
+                                    <a class = "nav-link" href = "https://www.aac-online.co.uk/shop/dry-goods/willows-reef-coral-feast-60g/" target = "_blank" rel = "noopener norferrer"> Coral Feast </a>
                                 </li>
                             </ul>
                         </span>
@@ -94,7 +94,7 @@
                                 </div>
                                 <span class = "dropdown-header">Products Available</span>
                                 <li class = "nav-item">
-                                    <a class = "nav-link" href = "https://www.aquacave.com/coral-feast-jars.html" target = "_blank"> 
+                                    <a class = "nav-link" href = "https://www.aquacave.com/coral-feast-jars.html" target = "_blank" rel = "noopener norferrer"> 
                                         Coral Feast 
                                     </a>
                                 </li>
@@ -113,7 +113,7 @@
                                 </div>
                                 <span class = "dropdown-header">Products Available</span>
                                 <li class = "nav-item">
-                                    <a class = "nav-link" href = "https://www.aquariumspecialty.com/willows-reef-coral-feast.html" target = "_blank"> Coral Feast </a>
+                                    <a class = "nav-link" href = "https://www.aquariumspecialty.com/willows-reef-coral-feast.html" target = "_blank" rel = "noopener norferrer"> Coral Feast </a>
                                 </li>
                             </ul>
                         </span>
@@ -130,13 +130,13 @@
                                 </div>
                                 <span class = "dropdown-header">Products Available</span>
                                 <li class = "nav-item">
-                                    <a class = "nav-link" href = "https://coralhubus.com/cart-2/coral-feast-60g/" target = "_blank"> Coral Feast </a>
+                                    <a class = "nav-link" href = "https://coralhubus.com/cart-2/coral-feast-60g/" target = "_blank" rel = "noopener norferrer"> Coral Feast </a>
                                 </li>
                                 <li class = "nav-item">
-                                    <a class = "nav-link" href = "https://coralhubus.com/cart-2/3-4-frag-plug/" target = "_blank"> AminoFeast+ </a>
+                                    <a class = "nav-link" href = "https://coralhubus.com/cart-2/3-4-frag-plug/" target = "_blank" rel = "noopener norferrer"> AminoFeast+ </a>
                                 </li>
                                 <li class = "nav-item">
-                                    <a class = "nav-link" href = "https://coralhubus.com/cart-2/rhodofeast/" target = "_blank"> RhodoFeast </a>
+                                    <a class = "nav-link" href = "https://coralhubus.com/cart-2/rhodofeast/" target = "_blank" rel = "noopener norferrer"> RhodoFeast </a>
                                 </li>
                             </ul>
                         </span>
@@ -153,7 +153,7 @@
                                 </div>
                                 <span class = "dropdown-header">Products Available</span>
                                 <li class = "nav-item">
-                                    <a class = "nav-link" href = "https://noopsycheusa.com/products/coral-feast-no-filler-coral-food-60g" target = "_blank"> Coral Feast </a>
+                                    <a class = "nav-link" href = "https://noopsycheusa.com/products/coral-feast-no-filler-coral-food-60g" target = "_blank" rel = "noopener norferrer"> Coral Feast </a>
                                 </li>
                             </ul>
                         </span>
@@ -170,13 +170,13 @@
                                 </div>
                                 <span class = "dropdown-header">Products Available</span>
                                 <li class = "nav-item">
-                                    <a class = "nav-link" href = "https://reefshackllc.com/products/coral-feast-powdered-coral-food-60-gm?_pos=1&_sid=9b682b3ea&_ss=r" target = "_blank"> Coral Feast </a>
+                                    <a class = "nav-link" href = "https://reefshackllc.com/products/coral-feast-powdered-coral-food-60-gm?_pos=1&_sid=9b682b3ea&_ss=r" target = "_blank" rel = "noopener norferrer"> Coral Feast </a>
                                 </li>
                                 <li class = "nav-item">
-                                    <a class = "nav-link" href = "https://reefshackllc.com/products/amino-feast-coral-food-amino-acid-250ml?_pos=1&_sid=71bb8333e&_ss=r" target = "_blank"> AminoFeast+ </a>
+                                    <a class = "nav-link" href = "https://reefshackllc.com/products/amino-feast-coral-food-amino-acid-250ml?_pos=1&_sid=71bb8333e&_ss=r" target = "_blank" rel = "noopener norferrer"> AminoFeast+ </a>
                                 </li>
                                 <li class = "nav-item">
-                                    <a class = "nav-link" href = "https://reefshackllc.com/products/rhodofeast-premium-direct-feed-probiotic-4oz-nitrate-phosphate-remover?_pos=2&_sid=9b682b3ea&_ss=r" target = "_blank"> RhodoFeast </a>
+                                    <a class = "nav-link" href = "https://reefshackllc.com/products/rhodofeast-premium-direct-feed-probiotic-4oz-nitrate-phosphate-remover?_pos=2&_sid=9b682b3ea&_ss=r" target = "_blank" rel = "noopener norferrer"> RhodoFeast </a>
                                 </li>
                             </ul>
                         </span>
@@ -193,7 +193,7 @@
                                 </div>
                                 <span class = "dropdown-header">Products Available</span>
                                 <li class = "nav-item">
-                                    <a class = "nav-link" href = "https://www.indiefur.com/product/willows-reef-coral-feast/" target = "_blank"> Coral Feast </a>
+                                    <a class = "nav-link" href = "https://www.indiefur.com/product/willows-reef-coral-feast/" target = "_blank" rel = "noopener norferrer"> Coral Feast </a>
                                 </li>
                             </ul>
                         </span>
@@ -210,7 +210,7 @@
                                 </div>
                                 <span class = "dropdown-header">Products Available</span>
                                 <li class = "nav-item">
-                                    <a class = "nav-link" href = "https://krakencorals.co.uk/willows-reef-coral-feast-60g.html" target = "_blank"> Coral Feast </a>
+                                    <a class = "nav-link" href = "https://krakencorals.co.uk/willows-reef-coral-feast-60g.html" target = "_blank" rel = "noopener norferrer"> Coral Feast </a>
                                 </li>
                             </ul>
                         </span>
