--- a/coral-feast.html
+++ b/coral-feast.html
@@ -42,8 +42,64 @@
         <div id = "pageContent" class = "">
             <!-- Overlay for Mobile Dropdown -->
             <div id = "screenOverlay">&nbsp;</div>
+            <div id = "popupOverlay">&nbsp;</div>
 
             <div id = "productSection" class = "container-fluid">
+                <div id = "storePopup">
+                    <i class = "close-popup-overlay far fa-times-circle">
+                        &nbsp;
+                    </i>
+                    <div style = "text-align: center; font-weight: bold; color: #fff; font-size: 2rem; text-transform: uppercase; ">
+                        Available At:
+                    </div>
+                    <div class = "row">
+                        <a class = "col-6 store-link" href = "https://www.amazon.com/Coral-Feast-Powdered-Quality-Food/dp/B08M95Z64Q/ref=sr_1_1?crid=2DB1V05HEENV5&keywords=coral%2Bfeast&qid=1636048104&sprefix=coral%2Caps%2C210&sr=8-1&th=1" target = "_blank" rel = "noopener norferrer">
+                            <div>
+                                <img alt = "Amazon" src = "images/test/test-1.png">
+                            </div>
+                        </a>
+                        <a class = "col-6 store-link" href = "https://www.aac-online.co.uk/shop/dry-goods/willows-reef-coral-feast-60g/" target = "_blank" rel = "noopener norferrer">
+                            <div>
+                                <img alt = "Advanced Aquarium Consultancy" src = "images/test/test-9.png" >
+                            </div>
+                        </a>
+                        <a class = "col-6 store-link" href = "https://www.aquacave.com/coral-feast-jars.html" target = "_blank" rel = "noopener norferrer">
+                            <div>
+                                <img alt = "AquaCave" src = "images/test/test-2.png" >
+                            </div>
+                        </a>
+                        <a class = "col-6 store-link" href = "https://www.aquariumspecialty.com/willows-reef-coral-feast.html" target = "_blank" rel = "noopener norferrer">
+                            <div>
+                                <img alt = "Aquarium Specialty" src = "images/test/test-3.png">
+                            </div>
+                        </a>
+                        <a class = "col-6 store-link" href = "https://coralhubus.com/cart-2/coral-feast-60g/" target = "_blank" rel = "noopener norferrer">
+                            <div>
+                                <img alt = "Coral Hub" src = "images/test/test-4.png">
+                            </div>
+                        </a>
+                        <a class = "col-6 store-link" href = "https://noopsycheusa.com/products/coral-feast-no-filler-coral-food-60g" target = "_blank" rel = "noopener norferrer">
+                            <div>
+                                <img alt = "Noopsyche USA" src = "images/test/test-5.png">
+                            </div>
+                        </a>
+                        <a class = "col-6 store-link" href = "https://reefshackllc.com/products/coral-feast-powdered-coral-food-60-gm?_pos=1&_sid=9b682b3ea&_ss=r" target = "_blank" rel = "noopener norferrer">
+                            <div>
+                                <img alt = "Reef Shack" src = "images/test/test-6.png">
+                            </div>
+                        </a>
+                        <a class = "col-6 store-link" href = "https://www.indiefur.com/product/willows-reef-coral-feast/" target = "_blank" rel = "noopener norferrer">
+                            <div>
+                                <img alt = "IndieFur" src = "images/test/test-8.png">
+                            </div>
+                        </a>
+                        <a class = "col-6 store-link" href = "https://krakencorals.co.uk/willows-reef-coral-feast-60g.html" target = "_blank" rel = "noopener norferrer">
+                            <div>
+                                <img alt = "Kraken Corals" src = "images/test/test-7.svg">
+                            </div>
+                        </a>
+                    </div>
+                </div>
                 <div class = "row justify-content-center product-descript-container">
                     <div class = "col-md-6 coral-feast-col">
                         <!--<img src = "../Willow's Reef Website Mockup/images/png/compressed-product-images/coral-feast-prd.png" alt = "Coral Feast">-->
@@ -57,9 +113,9 @@
                         fish protein powder, garlic powder, or bioenhancers.
                         <br><br>
 
-                        <a href = "/Willows-Reef-Mock-Up/stores-page.html" class = "link-button">
+                        <button class = "link-button">
                             See Stores
-                        </a>
+                        </button>
                     </div>
                 </div>
 
@@ -143,4 +199,5 @@
 
     <!-- Custom Site JS -->
     <script src = "js/site-js.js"></script>
+    <script src = "js/store-popup.js"></script>
 </html>
